--- a/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/app/ui/dashboard/sidebar/sidebar.module.css
@@ -1,3 +1,45 @@
 .container {
-    color: var(--text);
+    position: sticky;
+    top: 40px;
+      color: var(--text);
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.userImage {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.userDetail {
+  display: flex;
+  flex-direction: column;
+}
+
+.username {
+  font-weight: 500;
+}
+
+.userTitle {
+  font-size: 12px;
+  color: var(--textSoft);
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+}
+
+.cat {
+  color: var(--textSoft);
+  font-weight: bold;
+  font-size: 13px;
+  margin: 10px 0px;
 }
