--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,6 +1,6 @@
 :root {
-    --bg: #151c2c;
-    --bgSoft: #182237;
+    --bg: white;
+    --bgSoft: #46C500;
     --text: white;
     --textSoft: #b7bac1;
 }
@@ -20,3 +20,4 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
