--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,8 +1,8 @@
 :root {
     --bg: white;
     --bgSoft: #46C500;
-    --text: black;
-    --textSoft: #b7bac1;
+    --text: #ffffff;
+    --textWhiteBg: #b7bac1;
     --textSidebar: #ffffff;
 }
 
