--- a/app/ui/dashboard/navbar/navbar.module.css
+++ b/app/ui/dashboard/navbar/navbar.module.css
@@ -20,16 +20,25 @@
     gap: 20px;
 }
 
-.search, .icons {
+.icons {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
+.search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #6ebe25;
+    padding: 10px;
+    border-radius: 10px;
+    width: max-content;
+}
+
 .input {
-    background-color: darkgreen;
+    background-color: transparent;
     border: none;
     color: white;
-    padding: 10px 5px;
-    border-radius: 5px;
+    outline: none;
 }
