--- a/app/ui/dashboard/users/singleUser/singleUser.module.css
+++ b/app/ui/dashboard/users/singleUser/singleUser.module.css
@@ -40,7 +40,7 @@
   border: 2px solid #2e374a;
   border-radius: 5px;
   background-color: var(--bg);
-  color: var(--text);
+  color:black;
   margin: 10px 0px;
 }
 
