--- a/app/ui/login/loginForm/loginForm.module.css
+++ b/app/ui/login/loginForm/loginForm.module.css
@@ -17,7 +17,7 @@
   border: 2px solid #2e374a;
   border-radius: 5px;
   background-color: var(--bg);
-  color: var(--text);
+  color: black;
 }
 
 .form button {
